--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>我的小游戏合集</h1>
+    <h1>前人来者皆聚于此</h1>
     
     <div class="game-grid">
         <!-- 贪吃蛇游戏卡片 -->
