--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- 贪吃蛇游戏卡片 -->
         <a href="games/snake/" class="game-card">
             <div class="thumbnail" style="background: #2ecc71;"></div>
-            <h3>贪吃蛇</h3>
+            <h3>动态贪吃蛇</h3>
         </a>
 
         <!-- 未来添加其他游戏卡片（示例） -->
