--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- 主标题 -->
-    <h1>🎮 经典游戏合集</h1>
+    <h1>前人来者齐聚于此</h1>
     
     <!-- 游戏网格容器 -->
     <div class="game-grid">
@@ -16,7 +16,7 @@
         <a href="games/snake/" class="game-card">
             <!-- 动态封面 Canvas -->
             <canvas class="thumbnail" id="snake-preview"></canvas>
-            <h3>🐍 贪吃蛇</h3>
+            <h3>鸡式贪吃蛇</h3>
             <div class="thumbnail-overlay">点击开始游戏</div>
         </a>
 
