--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <!-- 主标题 -->
-    <h1>前人来者齐聚于此</h1>
+    <h1>前人来者齐聚于此
+    （遇事不决请刷新</h1>
     
     <!-- 游戏网格容器 -->
     <div class="game-grid">
