--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- 主标题 -->
     <h1>前人来者齐聚于此
-    （遇事不决请刷新</h1>
+    （遇事不决请刷新）</h1>
     
     <!-- 游戏网格容器 -->
     <div class="game-grid">
