--- a/games/tetris/index.html
+++ b/games/tetris/index.html
@@ -1,1 +1,32 @@
-test
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>俄罗斯方块</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="game-container">
+        <canvas id="game-board"></canvas>
+        <div class="mobile-controls">
+            <div class="control-group">
+                <button class="control-btn left">←</button>
+                <button class="control-btn rotate">↻</button>
+                <button class="control-btn right">→</button>
+            </div>
+            <div class="control-group">
+                <button class="control-btn down">↓</button>
+                <button class="control-btn drop">硬降</button>
+            </div>
+        </div>
+        <div class="side-panel">
+            <div class="score-box">
+                <h2>得分: <span id="score">0</span></h2>
+                <h2>等级: <span id="level">1</span></h2>
+            </div>
+        </div>
+    </div>
+    <script src="tetris.js"></script>
+</body>
+</html>
